Fix scroll overflow in remote file explorer

--- a/source/setup/sass/ConnectArchiveDialog.sass
+++ b/source/setup/sass/ConnectArchiveDialog.sass
@@ -4,6 +4,7 @@
     flex-wrap: nowrap
     justify-content: flex-start
     align-items: flex-start
+    height: 100%
 
     .configuration
         flex-grow: 0
@@ -17,6 +18,11 @@
         flex-grow: 1
         order: 2
         position: relative
+        height: 100%
+
+        .explorerContainer
+            height: 100%
+            overflow: scroll
 
 .dialogButtonView
     display: inline-block
